--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -8,13 +8,15 @@
     <uses-permission android:name="android.permission.READ_CONTACTS" />
     <uses-permission android:name="android.permission.INTERNET" />
     <uses-permission android:name="android.permission.CAMERA" />
-    <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE"/>
+    <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
+    <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION" />
     <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE" />
-    <uses-feature android:name="android.hardware.camera" android:required="true" />
-    <!-- <uses-feature android:name="android.hardware.camera"></uses-feature> -->
-    <!-- <uses-feature android:name="android.hardware.camera" android:required="false"></uses-feature> -->
     <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
-
+     <!--<uses-feature android:name="android.hardware.camera" />-->
+    <uses-feature android:name="android.hardware.camera.autofocus" />
+    <uses-feature
+        android:name="android.hardware.camera"
+        android:required="true" />
 
     <application
         android:allowBackup="true"
@@ -23,16 +25,18 @@
         android:roundIcon="@mipmap/a6"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".Login">
+        <activity android:name=".Photo4">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name=".Photo" />
-        <activity android:name=".Register" />
+        <activity android:name=".exphoto" />
+        <activity android:name=".Login" />
         <activity android:name=".Popup" />
+        <activity android:name=".Register" />
+        <activity android:name=".Photo" />
     </application>
 
 </manifest>
