--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,11 +1,12 @@
 apply plugin: 'com.android.application'
 
 android {
-    compileSdkVersion 28
+    compileSdkVersion 27
+    buildToolsVersion '27.0.3'
     defaultConfig {
-        applicationId "com.veena.senz.myapplication"
-        minSdkVersion 20
-        targetSdkVersion 28
+        applicationId "com.veena.senz.wave"
+        minSdkVersion 19
+        targetSdkVersion 27
         versionCode 1
         versionName "1.0"
         testInstrumentationRunner "android.support.test.runner.AndroidJUnitRunner"
@@ -13,23 +14,27 @@ android {
     buildTypes {
         release {
             minifyEnabled false
-            proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
+//            proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
         }
     }
-}
 
+    dexOptions {
+        keepRuntimeAnnotatedClasses false
+    }
+}
 dependencies {
-    implementation fileTree(dir: 'libs', include: ['*.jar'])
-    implementation 'com.android.support:appcompat-v7:28.0.0-rc02'
+    implementation fileTree(include: ['*.jar'], dir: 'libs')
+    implementation 'com.android.support:appcompat-v7:27.1.1'
+
     implementation 'com.android.support.constraint:constraint-layout:1.1.3'
     testImplementation 'junit:junit:4.12'
     androidTestImplementation 'com.android.support.test:runner:1.0.2'
     androidTestImplementation 'com.android.support.test.espresso:espresso-core:3.0.2'
-    compile 'com.android.volley:volley:1.0.0'
-    compile group: 'org.apache.httpcomponents', name: 'httpclient-android', version: '4.3.5.1'
-    compile 'com.squareup.okhttp3:okhttp:3.7.0'
-//    compile 'com.squareup.okhttp:okhttp:2.5.0'
 
-    //useLibrary 'org.apache.http.legacy'
-    // compile('org.apache.httpcomponents:httpmime:4.3')
+//    compile 'com.mcxiaoke.volley:library-aar:1.0.0'
+    compile 'com.squareup.okhttp3:okhttp:3.9.1'
+    compile 'com.android.support:multidex:1.0.1'
+    compile 'com.mcxiaoke.volley:library:1.0.19'
+    compile group: 'org.apache.httpcomponents', name: 'httpclient-android', version: '4.3.5.1'
+
 }
